--- a/src/app/calender/calender.component.html
+++ b/src/app/calender/calender.component.html
@@ -8,36 +8,6 @@
                 <h1 class="heading">Quản lý lịch báo cáo luận văn</h1>
                 <p class="sub-heading">Giảng viên hướng dẫn gửi lời mời đề xuất thêm 2 giảng viên cùng làm hội đồng và
                     xếp lịch báo cáo.</p>
-
-                    <!-- <div class="card shadow">
-                        <div class="card-header">
-                            <h6 class="card-heading">Chia nhóm sinh viên</h6>
-                            <button class="add-topic-button"><i class="fas fa-plus" style="margin-right: 10px;"></i>Thêm nhóm mới</button>
-                        </div>
-                        <div class="card-body">
-                            <table class="table" id="dataTable">
-                                <thead>
-                                    <tr>
-                                        <th>STT</th>
-                                        <th>MSSV</th>
-                                        <th>Họ tên sinh viên</th>
-                                        <th>Đề tài</th>
-                                        <th>Chọn nhóm</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>1</td>
-                                        <td>B1910191</td>
-                                        <td>Nguyễn Huy Bình</td>
-                                        <td>Hệ thống quản  lý thực hiện luận văn</td>
-                                        <td>Nhóm 1</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-    
-                    </div> -->
     
 
                 <div class="card shadow">
@@ -52,7 +22,6 @@
                                     <th>STT</th>
                                     <th>Nhóm sinh viên</th>
                                     <th>Lịch báo cáo</th>
-                                    <th>Danh sách đề tài</th>
                                     <th>HD 1 (Chủ  tịch)</th>
                                     <th>HD 2 (Phản biện)</th>
                                     <th>HD 3 (Thư ký - GVHD)</th>
@@ -63,12 +32,13 @@
                                 <tr>
                                     <td>1</td>
                                     <td>Nhóm 1</td>
-                                    <td>tuàn 18 phòng đa ahacisbcis</td>
-                                    <td>Xem</td>
-                                    <td>Ths. Nguyễn Minh Trung</td>
+                                    <td>tuàn 18 phòng đa</td>
+                                    <td>Ths. Nguyễn Minh Trung
+                                        <button>Trạng thái</button>
+                                    </td>
                                     <td>Ths. Lê Huỳnh Quốc Bảo</td>
                                     <td>TS. Thái Minh Tuấn</td>
-                                    <td>KHông</td>
+                                    <td>không</td>
                                 </tr>
                             </tbody>
                         </table>
