--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -164,7 +164,6 @@ a {
     color: #4e73df;
     text-decoration: none;
     background-color: transparent;
-    
 }
 
 a:hover {
@@ -5203,6 +5202,7 @@ input[type="button"].btn-block {
 
 .accordion {
     overflow-anchor: none;
+    /* margin-top: 10px; */
 }
 
 .accordion>.card {
@@ -10916,7 +10916,7 @@ a.text-dark:focus {
         size: a3;
     }
 
-    .body {
+    body {
         min-width: 992px !important;
     }
 
@@ -10968,8 +10968,8 @@ html {
     min-height: 100%;
 }
 
-.body {
-    min-height: 100%;
+body {
+    height: 100%;
 }
 
 a:focus {
@@ -11654,7 +11654,7 @@ a:focus {
 }
 
 .sidebar .sidebar-brand .sidebar-brand-icon i {
-    font-size: 2.5rem;
+    font-size: 2rem;
 }
 
 .sidebar .sidebar-brand .sidebar-brand-text {
@@ -12601,6 +12601,7 @@ footer.sticky-footer .copyright {
     font-size: 0.8rem;
 }
 
-.body.sidebar-toggled footer.sticky-footer {
+body.sidebar-toggled footer.sticky-footer {
     width: 100%;
 }
+
